--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -7,26 +7,38 @@
     tools:context=".UserActivity">
 
     <TextView
+        android:id="@+id/et_Studentid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="152dp"
+        app:layout_constraintTop_toBottomOf="@+id/et_StudentName"
+        tools:layout_editor_absoluteX="157dp"
+        tools:visibility="visible" />
+
+    <TextView
         android:id="@+id/et_StudentName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Öğrenci Adı: "
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="157dp"
-        tools:layout_editor_absoluteY="116dp" />
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/et_StudentEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Aktif Quizler"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/et_StudentName"
         tools:layout_editor_absoluteX="157dp"
-        tools:layout_editor_absoluteY="190dp" />
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/btn_Logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="84dp"
         android:text="Button"
-        tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="332dp" />
+        app:layout_constraintTop_toBottomOf="@+id/et_Studentid"
+        tools:layout_editor_absoluteX="116dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
