--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -6,21 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".QuestionActivity">
 
-    <TextView
-        android:id="@+id/question"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="192dp"
-        android:text="TextView"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="156dp" />
-
     <Button
-        android:id="@+id/btn_QuizKatil"
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Quize Katıl"
-        app:layout_constraintTop_toBottomOf="@+id/question"
-        tools:layout_editor_absoluteX="124dp" />
+        android:layout_marginTop="24dp"
+        android:text="Sınavı Bitir"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listView2" />
+
+    <ListView
+        android:id="@+id/listView2"
+        android:layout_width="394dp"
+        android:layout_height="603dp"
+        android:layout_marginBottom="84dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="1dp">
+
+    </ListView>
 </androidx.constraintlayout.widget.ConstraintLayout>
