--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,51 +2,41 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
+    android:background="@android:color/holo_blue_dark"
     android:layout_width="match_parent"
     android:layout_height="match_parent"><![CDATA[
     tools:context=".LoginActivity">
-
-
-
-
-
-
-
-
-
-
-
-
-
     ]]>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_RegisterScreen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="76dp"
-        android:background="#1B3AE8"
-        android:backgroundTint="#2A42C6"
+        android:background="@drawable/mybutton"
+        android:backgroundTint="@android:color/holo_red_light"
         android:text="Kayıt Ol"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_Password" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_Login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="84dp"
         android:layout_marginTop="76dp"
-        android:background="#2E47CF"
+        android:background="@drawable/mybutton"
+        android:backgroundTint="@color/lightblue"
         android:text="Giriş Yap"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintHorizontal_bias="0.262"
         app:layout_constraintStart_toEndOf="@+id/btn_RegisterScreen"
         app:layout_constraintTop_toBottomOf="@+id/et_Password" />
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/et_Password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -54,12 +44,15 @@
         android:ems="10"
         android:hint="Şifreniz"
         android:inputType="textPassword"
+        android:minHeight="48dp"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_Email" />
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/et_Email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -67,6 +60,9 @@
         android:ems="10"
         android:hint="Email Adresiniz"
         android:inputType="textEmailAddress"
+        android:minHeight="48dp"
+        android:textColor="#FDFDFD"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
